--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,8 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Oxygen", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.8;
     height: 500px;
     width: 600px;
     background-color:#252a2e;
@@ -10,8 +13,45 @@ body {
 }
 
 #app{
-    margin: 10px;
     min-height: 100%;
 }
 
 
+
+.navbar {
+    position: relative;
+    width: 100%;
+    background: black !important;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    font-family: "Montserrat", sans-serif;
+}
+
+.navbar-nav{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.navbar .nav-link {
+  padding: .5rem 0rem;
+  outline: none !important;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: .2em;
+}
+
+.navbar .nav-link.active {
+  color: #fff;
+}
+
+
+a {
+  -webkit-transition: .3s all ease;
+  -o-transition: .3s all ease;
+  transition: .3s all ease;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
