--- a/popup.css
+++ b/popup.css
@@ -20,6 +20,7 @@ body {
 
 .navbar {
     position: relative;
+    height: 100px;
     width: 100%;
     background: black !important;
     padding-top: .5rem;
@@ -29,29 +30,29 @@ body {
 
 .navbar-nav{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(5, 1fr);  /*5 is the number of menu items*/
 }
 
 .navbar .nav-link {
-  padding: .5rem 0rem;
-  outline: none !important;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: .2em;
+    position: relative;
+    padding: .5rem 0rem;
+    outline: none !important;
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: .2em;
+    -webkit-transition: .3s all ease;
+    -o-transition: .3s all ease;
+    transition: .3s all ease;
+    text-decoration: none;
+    cursor:pointer;
 }
 
 .navbar .nav-link.active {
   color: #fff;
 }
 
-
-a {
-  -webkit-transition: .3s all ease;
-  -o-transition: .3s all ease;
-  transition: .3s all ease;
-  text-decoration: none;
-}
-
-a:hover {
+nav.link:hover {
   text-decoration: none;
 }
