--- a/popup.css
+++ b/popup.css
@@ -29,7 +29,7 @@ body {
 
 .navbar-nav{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(6, 1fr);
 }
 
 .navbar .nav-link {
@@ -38,6 +38,7 @@ body {
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: .2em;
+  text-align: center;
 }
 
 .navbar .nav-link.active {
