--- a/components/tagManagerInjector/tagManagerInjector.css
+++ b/components/tagManagerInjector/tagManagerInjector.css
@@ -2,14 +2,66 @@
     color: #fff;
     min-height: 400px;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 2fr 1fr;
+    padding: 0.5em;
 
+}
+
+#injector .row {
+    display: flex;
+    
 }
 
 #injector .title {
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
+#injector .form-group {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+#injector .button-group {
+    flex-direction: row;
+    align-items: baseline;
+    
+}
+
+.error {
+    border: 1px solid red;
+}
+
+.success {
+    border: 3px solid green;
+}
+
+.medium {
+    border: 3px solid yellow;
+}
+
+.injectionSuccess {
+    display: none;
+    color: green;
+}
+
+.injectionFailed {
+    display: none;
+    color: yellow;
+}
+
+.visible {
+    display: block;
+    font-size: 1rem;
+    font-family: "Oxygen", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+
+
+
+
+ 
