--- a/components/GhostForce/ghostforce.css
+++ b/components/GhostForce/ghostforce.css
@@ -3,6 +3,7 @@
 }
 
 .row_icon{
+    border-radius: 1.5rem;
     padding: 1rem;
     text-align: center;
     margin: 0px auto 0.6rem;
@@ -48,12 +49,14 @@
 }
 
 .detail_info{
+    
+    border-radius: 1.5rem;
+    color: #f2f2f2;
     font-size: 0.9rem;
     padding: 1rem;
     border-radius: 0.6rem;
     text-align: center;
-    width: 46rem;
-   
+
     margin: 0px auto 1rem;
 }
 
