--- a/components/GhostForce/ghostforce.css
+++ b/components/GhostForce/ghostforce.css
@@ -1,3 +1,50 @@
+#ghostforceComponent {
+    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    letter-spacing: 1px;
+}
+
+
+#ghostforceComponent > div {
+    width: 95%;
+    background-color: #404040;
+    margin: 17px auto;
+    border-radius: 25px;
+    padding: 0;
+    -webkit-box-shadow: -2px 7px 13px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: -2px 7px 13px -1px rgba(0,0,0,0.75);
+    box-shadow: -2px 7px 13px -1px rgba(0,0,0,0.75);
+    color: #f2f2f2;
+    text-align: center;
+}
+
+#ghostforceComponent > div > h1 {
+    font-size: 15px;
+    background-color: #666666;
+    border-radius: 25px 25px 0 0;
+    height: 45px;
+    text-align: left;
+    padding-left: 15px;
+    color: white;
+    padding: 10px 0 0 15px;
+    text-shadow: 0 0 10px #FFFFFF;
+    color: #FFFFFF;
+    letter-spacing: 2.4px;
+}
+
+#ghostforceComponent > div > h1 > img {
+    height: 20px;
+    width: 20px;
+    margin: 0 10px 2px 0;
+    -webkit-box-shadow: 10px -12px 86px -5px rgba(250,250,230,1);
+    -moz-box-shadow: 10px -12px 86px -5px rgba(250,250,230,1);
+    box-shadow: 10px -12px 86px -5px rgba(250,250,230,1);
+}
+
+
+
 .icon{
     padding-top: 15px;
 }
@@ -46,17 +93,5 @@
 
 .tool:hover .tip {
     visibility: visible;
-}
-
-.detail_info{
-    
-    border-radius: 1.5rem;
-    color: #f2f2f2;
-    font-size: 0.9rem;
-    padding: 1rem;
-    border-radius: 0.6rem;
-    text-align: center;
-
-    margin: 0px auto 1rem;
 }
 
