--- a/components/GhostForce/ghostforce.css
+++ b/components/GhostForce/ghostforce.css
@@ -42,7 +42,17 @@
     box-shadow: 10px -12px 86px -5px rgba(250,250,230,1);
 }
 
+.btcp {
+    padding: 0.3rem;
+    margin: 0.3rem;
+    border: groove 1px  rgba(255,255,255,.075);;
+    border-radius: 0.4rem;
+    cursor: pointer;
+}
 
+.btcp:hover { 
+    background-color: rgba(255,255,255,.075);
+}
 
 .icon{
     padding-top: 15px;
