--- a/components/GhostForce/ghostforce.css
+++ b/components/GhostForce/ghostforce.css
@@ -42,18 +42,11 @@
     box-shadow: 10px -12px 86px -5px rgba(250,250,230,1);
 }
 
-.btcp {
-    padding: 0.3rem;
-    margin: 0.3rem;
-    border: groove 1px  rgba(255,255,255,.075);;
-    border-radius: 0.4rem;
-    cursor: pointer;
-}
-
 #ghostforceComponent > div .line_info {
     
     text-align: left;
-    padding: 5px 0 5px 15px;
+    padding: 10px;
+    margin: 5px;
     min-width: 100%;
 
   }
@@ -68,17 +61,37 @@
     box-shadow: 10px -12px 86px -5px rgba(250,250,230,1);
   }
 
+#ghostforceComponent .task {
+    
+    border: groove 1px rgba(255,255,255,.075);
+    border-radius: 1.5rem;
+    padding: 0.5rem;
+    text-align: center;
+    margin: 10px;
+    
+}
+#ghostforceComponent .Completed{
+    background-color: green;
+}
+
+#ghostforceComponent .Open{
+    background-color: yellow;
+}
+#ghostforceComponent .Inactive{
+    background-color: red;
+}
 
   
 
   #ghostforceComponent > div .btcp{
-     padding: 0.1rem;
-    margin: 0.1rem; 
+    padding: 0.1rem;
+    margin: 0.1rem;
+    border: hidden 1px rgba(255,255,255,.075);
 }
 
 .btcp:hover {
    
-    border: groove 1px rgba(255,255,255,.075);;
+    border: groove 1px rgba(255,255,255,.075);
     border-radius: 0.4rem;
     cursor: pointer;
     background-color: rgba(255,255,255,.075);
@@ -99,7 +112,7 @@
     height: 3rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    filter: drop-shadow(3px 3px 6px #888);
+    /* filter: drop-shadow(3px 3px 6px #888); */
     cursor: pointer;
 }
 
