--- a/components/KnowledgeBase/knowledgebase.css
+++ b/components/KnowledgeBase/knowledgebase.css
@@ -13,12 +13,16 @@
     font-size: 15px;
 }
 #buttonTask{
+    width: 100%;
+    height: 100%;
+}
+#taskSearch{
     margin-top: 5px;
 }
 
 #buttonCms{
     margin-top: 5px;
-    margin-left: 20px;
+    width: 100%;
 }
 #myInput:focus, #myInput2:focus{
     background-color: #ecf0f1;
