knoledge base done add back button

--- a/components/KnowledgeBase/knowledgebase.css
+++ b/components/KnowledgeBase/knowledgebase.css
@@ -7,7 +7,6 @@
 }
 
 #myInput, #myInput2{
-    border-radius: 3px;
     background-color: white;
     border: none;
     font-size: 15px;
@@ -25,8 +24,13 @@
     width: 100%;
 }
 #myInput:focus, #myInput2:focus{
+    outline: none;
     background-color: #ecf0f1;
-    border-color: white;
+}
+
+.backButton{
+    float: left;
+    margin-left: -20px;
 }
 
 .inputSearch{
