--- a/components/GhostForce/ghostforce.css
+++ b/components/GhostForce/ghostforce.css
@@ -63,8 +63,33 @@
     display: inline-block;
     vertical-align: middle;
     cursor: pointer;
+    
   }
 
+    p.call_button  {
+    
+        width: auto; 
+        color: white;
+        font-size: 0.8rem;
+        -webkit-box-shadow: 2px 10px 7px -6px rgba(0,0,0,0.75);
+        -moz-box-shadow: 2px 10px 7px -6px rgba(0,0,0,0.75);
+        box-shadow: 2px 10px 7px -6px rgba(0,0,0,0.75);
+        
+       
+    }
+
+    button.call_button i {
+        padding-left: 1rem;
+    }
+
+ 
+    .call_button_modifier {
+        color: white;
+    }
+
+    p.call_button:hover .tip {
+        visibility: visible;
+    }
 
   #ghostforceComponent > div .line_info > img {
     height: 12px;
