--- a/components/KnowledgeBase/knowledgebase.css
+++ b/components/KnowledgeBase/knowledgebase.css
@@ -1,32 +1,33 @@
+.container{
+    margin-top: 10px;
+}
+.mainDiv{
+    background-color:#252a2e; 
+    color:white;
+}
+/*
 #taskDiv{
     text-align: center;
-}
+}*/
 
 #cmsDiv{
     text-align: center;
 }
 
-#myInput, #myInput2{
-    background-color: white;
-    border: none;
-    font-size: 15px;
+#myInput{
+    margin: 10px;
 }
-#buttonTask{
-    width: 100%;
-    height: 100%;
-}
+
 #taskSearch{
     margin-top: 5px;
+    padding-left: 0px !important;
 }
 
 #buttonCms{
     margin-top: 5px;
     width: 100%;
 }
-#myInput:focus, #myInput2:focus{
-    outline: none;
-    background-color: #ecf0f1;
-}
+
 
 .backButton{
     float: left;
@@ -37,11 +38,17 @@
     color: white;
     font-size: 19px;
     font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
 }
 .row-centered {
-
     text-align:center;
 }
+.column {
+    margin-left: -20px;
+    margin-right: 20px;
+    width: 25%;
+  }
 .col-centered-task, .col-centered-cms{
 
     display:inline-block;
@@ -50,4 +57,88 @@
     text-align:left;
     /* inline-block space fix */
     margin-right:-4px;
+}
+.taskButton{
+    width: 100%;
+    height: 100%;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+    transform: translate3d(120px, -230px, 320px)!important;
+}
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown-content-right{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown:hover .dropdown-content-right{
+    display: block;
+    transform: translate3d(-250px, -229px, 320px)!important;
+  }
+  .dropdownTask{
+      height: 240px;
+      overflow: scroll;
+  }
+  .dropdownAnalytics{
+    height: 320px;
+    overflow: scroll;
+}
+
+input {
+	outline: none;
+}
+input[type=search] {
+	-webkit-appearance: textfield;
+	box-sizing: content-box;
+	font-family: inherit;
+	font-size: 100%;
+}
+input::-webkit-search-decoration,
+input::-webkit-search-cancel-button {
+	display: none; 
+}
+
+
+input[type=search] {
+	background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
+	border: solid 1px #ccc;
+	padding: 9px 10px 9px 32px;
+    width: 90px;
+    height: 15px;
+    margin: 2px 0px 0px 10px;
+	
+	-webkit-border-radius: 10em;
+	-moz-border-radius: 10em;
+	border-radius: 10em;
+	
+	-webkit-transition: all .5s;
+	-moz-transition: all .5s;
+	transition: all .5s;
+}
+input[type=search]:focus {
+	width: 150px;
+	background-color: #fff;
+	border-color: #66CC75;
+	
+	-webkit-box-shadow: 0 0 5px rgba(109,207,246,.5);
+	-moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
+	box-shadow: 0 0 5px rgba(109,207,246,.5);
+}
+
+
+input:-moz-placeholder {
+	color: #999;
+}
+input::-webkit-input-placeholder {
+	color: #999;
 }
