--- a/components/KnowledgeBase/knowledgebase.css
+++ b/components/KnowledgeBase/knowledgebase.css
@@ -5,14 +5,6 @@
     background-color:#252a2e; 
     color:white;
 }
-/*
-#taskDiv{
-    text-align: center;
-}*/
-
-#cmsDiv{
-    text-align: center;
-}
 
 #myInput{
     margin: 10px;
@@ -23,16 +15,6 @@
     padding-left: 0px !important;
 }
 
-#buttonCms{
-    margin-top: 5px;
-    width: 100%;
-}
-
-
-.backButton{
-    float: left;
-    margin-left: -20px;
-}
 
 .inputSearch{
     color: white;
@@ -41,58 +23,91 @@
     margin-bottom: 20px;
     text-align: center;
 }
+
 .row-centered {
     text-align:center;
 }
+
 .column {
     margin-left: -20px;
     margin-right: 20px;
     width: 25%;
-  }
-.col-centered-task, .col-centered-cms{
+} 
 
-    display:inline-block;
-    float:none;
-    /* reset the text-align */
-    text-align:left;
-    /* inline-block space fix */
-    margin-right:-4px;
+.dropdown-content, .dropdown-content-cmsDiv {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
-.taskButton{
-    width: 100%;
-    height: 100%;
-}
+
 .dropdown:hover .dropdown-content {
     display: block;
+}
+.dropdownTask:hover .dropdown-content-task{
+    display: block;
+}
+
+.dropdownTask{
+    height: 240px; 
+    overflow: scroll;
     transform: translate3d(120px, -230px, 320px)!important;
 }
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  .dropdown-content-right{
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  .dropdown:hover .dropdown-content-right{
-    display: block;
-    transform: translate3d(-250px, -229px, 320px)!important;
-  }
-  .dropdownTask{
-      height: 240px;
-      overflow: scroll;
-  }
-  .dropdownAnalytics{
-    height: 320px;
-    overflow: scroll;
+
+.dropdownAnalytics{
+  height: 260px;
+  overflow: scroll;
+  float: left;
+  min-width: 10rem;
+  padding: .5rem 0;
+  margin: .125rem 0 0;
+  font-size: 1rem;
+  color: #212529;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0,0,0,.15);
+  border-radius: .25rem;
 }
+
+.dropdownCmsDiv:hover .dropdown-content-cmsDiv{
+    display: block;
+    float: left;
+    min-width: 10rem;
+    padding: .5rem 0;
+    margin: .125rem 0 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: .25rem;
+}
+
+.dropdown:hover .dropdownShopping {
+    display: block;
+    right: -45px;
+    height: 260px;
+    overflow: scroll;
+    float: left;
+    min-width: 10rem;
+    padding: .5rem 0;
+    margin: .125rem 0 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: .25rem;
+  }
+
 
 input {
 	outline: none;
